@@ -91,6 +91,7 @@ public enum ConfigNodes {
 	    FILTERS_MODIFY_CHAT("filters_colour_chat.modify_chat",""),
 	    FILTERS_MODIFY_CHAT_ENABLE("filters_colour_chat.modify_chat.enable","true"),
 	    FILTERS_MODIFY_CHAT_FORMAT("filters_colour_chat.modify_chat.format","{nation}{town}{permprefix}{townynameprefix}{playername}{townynamepostfix}{permsuffix}"),
+	    FILTERS_MODIFY_CHAT_MAX_LGTH("filters_colour_chat.modify_chat.max_title_length","15"),
 	    FILTERS_COLOUR("filters_colour_chat.colour",""),
 	    FILTERS_COLOUR_KING("filters_colour_chat.colour.king","&6"),
 	    FILTERS_COLOUR_MAYOR("filters_colour_chat.colour.mayor","&b"),
