@@ -343,6 +343,7 @@ msg_err_already_nation: '&cTarget town already belongs to a nation.'
 msg_err_invalid_property: '&cInvalid %s property.'
 msg_err_not_supported: '&cNot yet supported.'
 msg_err_invalid_input: '&cInvalid input. Use %s'
+msg_err_input_too_long: '&cInput too long.'
 msg_err_invalid_choice: '&cInvalid choice'
 msg_err_invalid_sub: '&cInvalid sub command.'
 msg_err_command_disable: '&cCommand disabled: Using permissions.'
