@@ -424,3 +424,4 @@ v0.74.1:
     - Durations specified in the config are now in seconds rather than milliseconds.
     - Implemented Towny's own teleport_warmup_time.
     - Added a command '/townyadmin reset'. Wipes all settings and generate/load a default config.yml.
+    - Title and Surnames can now be limited in length by the setting 'max_title_length' in config.yml.
